# amoc-utac

./: .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  RELEASE_GUIDE.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
amoc_utac/: __init__.py  benchmark.py  cli.py  constants.py  crep_amoc.py  ethics_gate.py  fingerprint.py  freshwater.py  rapid_loader.py  system.py  tension_metric.py  tipping_predictor.py
data/: rapid_mocha_summary.yaml  van_westen_2024_targets.yaml
notebooks/: 01_amoc_utac_overview.ipynb  02_rapid_crep_analysis.ipynb  03_tipping_prediction.ipynb  04_gamma_amoc_calibration.ipynb
tests/: test_diamond_interface.py  test_fingerprint.py  test_freshwater.py  test_tipping_predictor.py
