[project]
name = "amoc-utac"
version = "1.1.0"
description = "AMOC collapse early warning — GenesisAeon Package 18 (UTAC/CREP dynamical system)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Johann Römer", email = "j.roemer@mor-research.org" }]
requires-python = ">=3.11"
keywords = [
    "AMOC",
    "ocean circulation",
    "tipping point",
    "UTAC",
    "CREP",
    "climate",
    "GenesisAeon",
    "early warning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "diamond-setup>=2.1.0",
    "numpy>=1.26",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.scripts]
amoc-utac = "amoc_utac.cli:app"

[project.urls]
Homepage    = "https://github.com/genesisaeon/amoc-utac"
Repository  = "https://github.com/genesisaeon/amoc-utac"
Zenodo      = "https://doi.org/10.5281/zenodo.19645351"
Reference   = "https://doi.org/10.1126/sciadv.adk1189"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amoc_utac"]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "C4", "SIM"]
ignore = ["B008", "UP017"]  # UP017: datetime.UTC not available as class attr in Python 3.11

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=amoc_utac --cov-report=term-missing -v"

[tool.coverage.run]
source = ["amoc_utac"]
omit   = ["tests/*"]

[tool.mypy]
python_version      = "3.11"
strict              = true
warn_return_any     = true
warn_unused_configs = true
ignore_missing_imports = true
